# MsgBus

./: .gitignore  BENCHMARK.md  CMakeLists.txt  README.md  design.md
.github/workflows/: ci.yml  release.yml
doc/en/: BENCHMARK.md  README.md  design.md
doc/zh/: BENCHMARK.md  README.md  design.md
examples/: CMakeLists.txt  basic_example.cpp  coroutine_example.cpp  wildcard_example.cpp
include/msgbus/: lock_free_queue.h  message.h  message_bus.h  spsc_queue.h  topic_registry.h  topic_slot.h  wildcard_trie.h
tests/: CMakeLists.txt  bench_message_bus.cpp  test_message_bus.cpp
